fixed table and captions

--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -279,76 +279,76 @@ The 17 most highly expressing kinases showed relatively high purity after elutio
 \footnotesize
 \begin{tabular}{p{3.5cm}p{4cm}c}
 \toprule
-\bf{kinase expressed} & \bf{phosphatase co-expressed} & \bf{concentration (ng/$\mu$l eluate)} \\
+\bf{kinase expressed} & \bf{phosphatase co-expressed} & \bf{expected scale-up culture (mg/L)} \\
 \midrule
-MK14\_HUMAN\_D0  & Lambda                    & 530                   \\
-VRK3\_HUMAN\_D0  & Lambda                    & 506                   \\
-GAK\_HUMAN\_D0   & Lambda                    & 485                   \\
-CSK\_HUMAN\_D0   & Truncated YopH164         & 469                   \\
-VRK1\_HUMAN\_D0  & Lambda                    & 467                   \\
-KC1G3\_HUMAN\_D0 & Lambda                    & 422                   \\
-FES\_HUMAN\_D0   & Truncated YopH164         & 330                   \\
-PMYT1\_HUMAN\_D0 & Lambda                    & 285                   \\
-MK03\_HUMAN\_D0  & Lambda                    & 273                   \\
-STK3\_HUMAN\_D0  & Lambda                    & 257                   \\
-DYR1A\_HUMAN\_D0 & Lambda                    & 256                   \\
-KC1G1\_HUMAN\_D0 & Lambda                    & 256                   \\
-MK11\_HUMAN\_D0  & Lambda                    & 238                   \\
-MK13\_HUMAN\_D0  & Lambda                    & 238                   \\
-EPHB1\_HUMAN\_D0 & Truncated YopH164         & 217                   \\
-MK08\_HUMAN\_D0  & Lambda                    & 214                   \\
-CDK16\_HUMAN\_D0 & Lambda                    & 202                   \\
-EPHB2\_HUMAN\_D0 & Truncated YopH164         & 188                   \\
-PAK4\_HUMAN\_D0  & Lambda                    & 179                   \\
-CDKL1\_HUMAN\_D0 & Lambda                    & 174                   \\
-SRC\_HUMAN\_D0   & Truncated YopH164         & 165                   \\
-STK16\_HUMAN\_D0 & Lambda                    & 155                   \\
-MAPK3\_HUMAN\_D0 & Lambda                    & 141                   \\
-PAK6\_HUMAN\_D0  & Lambda                    & 135                   \\
-CSK22\_HUMAN\_D0 & Lambda                    & 134                   \\
-MERTK\_HUMAN\_D0 & Truncated YopH164         & 126                   \\
-PAK7\_HUMAN\_D0  & Lambda                    & 110                   \\
-CSK21\_HUMAN\_D0 & Lambda                    & 109                   \\
-EPHA3\_HUMAN\_D0 & Truncated YopH164         & 106                   \\
-BMPR2\_HUMAN\_D0 & Lambda                    & 106                   \\
-M3K5\_HUMAN\_D0  & Lambda                    & 105                   \\
-KCC2G\_HUMAN\_D0 & Lambda                    & 100                   \\
-E2AK2\_HUMAN\_D0 & Lambda                    & 87                    \\
-MK01\_HUMAN\_D0  & Lambda                    & 84                    \\
-CSKP\_HUMAN\_D0  & Lambda                    & 76                    \\
-CHK2\_HUMAN\_D0  & Lambda                    & 61                    \\
-KC1G2\_HUMAN\_D0 & Lambda                    & 57                    \\
-DMPK\_HUMAN\_D0  & Lambda                    & 57                    \\
-KCC2B\_HUMAN\_D0 & Lambda                    & 53                    \\
-FGFR1\_HUMAN\_D0 & Truncated YopH164         & 46                    \\
-KS6A1\_HUMAN\_D1 & Lambda                    & 43                    \\
-DAPK3\_HUMAN\_D0 & Lambda                    & 30                    \\
-STK10\_HUMAN\_D0 & Lambda                    & 28                    \\
-KC1D\_HUMAN\_D0  & Lambda                    & 28                    \\
-KC1E\_HUMAN\_D0  & Lambda                    & 26                    \\
-NEK1\_HUMAN\_D0  & Lambda                    & 25                    \\
-CDK2\_HUMAN\_D0  & Lambda                    & 23                    \\
-ABL1\_HUMAN\_D0  & Truncated YopH164         & 19                    \\
-DAPK1\_HUMAN\_D0 & Lambda                    & 18                    \\
-DYRK2\_HUMAN\_D0 & Lambda                    & 18                    \\
-HASP\_HUMAN\_D0  & Lambda                    & 17                    \\
-FGFR3\_HUMAN\_D0 & Truncated YopH164         & 17                    \\
-EPHB3\_HUMAN\_D0 & Truncated YopH164         & 13                    \\
-SLK\_HUMAN\_D0   & Lambda                    & 12                    \\
-KCC2D\_HUMAN\_D0 & Lambda                    & 12                    \\
-NEK7\_HUMAN\_D0  & Lambda                    & 10                    \\
-PHKG2\_HUMAN\_D0 & Lambda                    & 10                    \\
-VRK2\_HUMAN\_D0  & Lambda                    & 9                     \\
-AAPK2\_HUMAN\_D0 & Lambda                    & 8                     \\
-AURKA\_HUMAN\_D0 & Lambda                    & 8                     \\
-MARK3\_HUMAN\_D0 & Lambda                    & 8                     \\
-KAPCA\_HUMAN\_D0 & Lambda                    & 7                     \\
-STK24\_HUMAN\_D0 & Lambda                    & 6                     \\
-VGFR1\_HUMAN\_D0 & Truncated YopH164         & 4                     \\
-KCC4\_HUMAN\_D0  & Lambda                    & 3                     \\
-KCC1G\_HUMAN\_D0 & Lambda                    & 2                     \\
-KCC2A\_HUMAN\_D0 & Lambda                    & 2                     \\
-FAK2\_HUMAN\_D0  & Truncated YopH164         & 2                     \\             
+MK14\_HUMAN\_D0  & Lambda                    & 70.7                            \\
+VRK3\_HUMAN\_D0  & Lambda                    & 67.5                            \\
+GAK\_HUMAN\_D0   & Lambda                    & 64.7                            \\
+CSK\_HUMAN\_D0   & Truncated YopH164         & 62.5                            \\
+VRK1\_HUMAN\_D0  & Lambda                    & 62.3                            \\
+KC1G3\_HUMAN\_D0 & Lambda                    & 56.3                            \\
+FES\_HUMAN\_D0   & Truncated YopH164         & 44.0                            \\
+PMYT1\_HUMAN\_D0 & Lambda                    & 38.0                            \\
+MK03\_HUMAN\_D0  & Lambda                    & 36.4                            \\
+STK3\_HUMAN\_D0  & Lambda                    & 34.3                            \\
+DYR1A\_HUMAN\_D0 & Lambda                    & 34.1                            \\
+KC1G1\_HUMAN\_D0 & Lambda                    & 34.1                            \\
+MK11\_HUMAN\_D0  & Lambda                    & 31.7                            \\
+MK13\_HUMAN\_D0  & Lambda                    & 31.7                            \\
+EPHB1\_HUMAN\_D0 & Truncated YopH164         & 28.9                            \\
+MK08\_HUMAN\_D0  & Lambda                    & 28.5                            \\
+CDK16\_HUMAN\_D0 & Lambda                    & 26.9                            \\
+EPHB2\_HUMAN\_D0 & Truncated YopH164         & 25.1                            \\
+PAK4\_HUMAN\_D0  & Lambda                    & 23.9                            \\
+CDKL1\_HUMAN\_D0 & Lambda                    & 23.2                            \\
+SRC\_HUMAN\_D0   & Truncated YopH164         & 22.0                            \\
+STK16\_HUMAN\_D0 & Lambda                    & 20.7                            \\
+MAPK3\_HUMAN\_D0 & Lambda                    & 18.8                            \\
+PAK6\_HUMAN\_D0  & Lambda                    & 18.0                            \\
+CSK22\_HUMAN\_D0 & Lambda                    & 17.9                            \\
+MERTK\_HUMAN\_D0 & Truncated YopH164         & 16.8                            \\
+PAK7\_HUMAN\_D0  & Lambda                    & 14.7                            \\
+CSK21\_HUMAN\_D0 & Lambda                    & 14.5                            \\
+EPHA3\_HUMAN\_D0 & Truncated YopH164         & 14.1                            \\
+BMPR2\_HUMAN\_D0 & Lambda                    & 14.1                            \\
+M3K5\_HUMAN\_D0  & Lambda                    & 14.0                            \\
+KCC2G\_HUMAN\_D0 & Lambda                    & 13.3                            \\
+E2AK2\_HUMAN\_D0 & Lambda                    & 11.6                            \\
+MK01\_HUMAN\_D0  & Lambda                    & 11.2                            \\
+CSKP\_HUMAN\_D0  & Lambda                    & 10.1                            \\
+CHK2\_HUMAN\_D0  & Lambda                    & 8.1                             \\
+KC1G2\_HUMAN\_D0 & Lambda                    & 7.6                             \\
+DMPK\_HUMAN\_D0  & Lambda                    & 7.6                             \\
+KCC2B\_HUMAN\_D0 & Lambda                    & 7.1                             \\
+FGFR1\_HUMAN\_D0 & Truncated YopH164         & 6.1                             \\
+KS6A1\_HUMAN\_D1 & Lambda                    & 5.7                             \\
+DAPK3\_HUMAN\_D0 & Lambda                    & 4.0                             \\
+STK10\_HUMAN\_D0 & Lambda                    & 3.7                             \\
+KC1D\_HUMAN\_D0  & Lambda                    & 3.7                             \\
+KC1E\_HUMAN\_D0  & Lambda                    & 3.5                             \\
+NEK1\_HUMAN\_D0  & Lambda                    & 3.3                             \\
+CDK2\_HUMAN\_D0  & Lambda                    & 3.1                             \\
+ABL1\_HUMAN\_D0  & Truncated YopH164         & 2.5                             \\
+DAPK1\_HUMAN\_D0 & Lambda                    & 2.4                             \\
+DYRK2\_HUMAN\_D0 & Lambda                    & 2.4                             \\
+HASP\_HUMAN\_D0  & Lambda                    & 2.3                             \\
+FGFR3\_HUMAN\_D0 & Truncated YopH164         & 2.3                             \\
+EPHB3\_HUMAN\_D0 & Truncated YopH164         & 1.7                             \\
+SLK\_HUMAN\_D0   & Lambda                    & 1.6                             \\
+KCC2D\_HUMAN\_D0 & Lambda                    & 1.6                             \\
+NEK7\_HUMAN\_D0  & Lambda                    & 1.3                             \\
+PHKG2\_HUMAN\_D0 & Lambda                    & 1.3                             \\
+VRK2\_HUMAN\_D0  & Lambda                    & 1.2                             \\
+AAPK2\_HUMAN\_D0 & Lambda                    & 1.1                             \\
+AURKA\_HUMAN\_D0 & Lambda                    & 1.1                             \\
+MARK3\_HUMAN\_D0 & Lambda                    & 1.1                             \\
+KAPCA\_HUMAN\_D0 & Lambda                    & 0.9                             \\
+STK24\_HUMAN\_D0 & Lambda                    & 0.8                             \\
+VGFR1\_HUMAN\_D0 & Truncated YopH164         & 0.5                             \\
+KCC4\_HUMAN\_D0  & Lambda                    & 0.4                             \\
+KCC1G\_HUMAN\_D0 & Lambda                    & 0.3                             \\
+KCC2A\_HUMAN\_D0 & Lambda                    & 0.3                             \\
+FAK2\_HUMAN\_D0  & Truncated YopH164         & 0.3                             \\
 \bottomrule
 \end{tabular}
 \end{table*}
@@ -356,10 +356,10 @@ FAK2\_HUMAN\_D0  & Truncated YopH164         & 2                     \\
 \begin{figure}[tb]
    \includegraphics[width=\columnwidth]{figures/kinome_expression.png}
   \caption{{\bf Representation of kinase domain expression results on phylogenetic tree.}
-  Dark green circles represent kinases with expression above 250 $ng/ \mu l$ eluate.
-  Light green circles represent kinases with expression between 100 and 250 $ng/ \mu l$ eluate.
-  Yellow circles represent kinases with expression between 50 and 100 $ng/ \mu l$ eluate.
-  Yellow circles represent kinases with any expression up to 50 $ng/ \mu l$ eluate.
+  Dark green circles represent kinases with expression above 50 mg/L yield.
+  Light green circles represent kinases with expression between 50 and 12 mg/L yield.
+  Yellow circles represent kinases with expression between 12 and 7 mg/L yield.
+  Yellow circles represent kinases with any expression (even below 2 mg/L) up to 7 mg/L yield.
   Image made with KinMap: \href{http://www.kinhub.org/kinmap}{http://www.kinhub.org/kinmap}. 
    }
   \label{fig:kinome_expression_tree}
@@ -368,7 +368,7 @@ FAK2\_HUMAN\_D0  & Truncated YopH164         & 2                     \\
 \begin{figure*}[tb]
    \includegraphics[width=\columnwidth]{figures/caliper_image.png}
   \caption{{\bf Synthetic gel image rendering of highest expressing kinases.}
-   Caliper GX II synthetic gel image rendering of kinases expressing > 200 $ng/ \mu l$ eluate from microfluidic capillary electrophoresis quantitation.
+   Caliper GX II synthetic gel image rendering of kinases expressing > 25 mg/L from microfluidic capillary electrophoresis quantitation.
    }
   \label{fig:caliper_image}
 \end{figure*}
