Added compressed JPG of kinome tree figure

--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -354,7 +354,7 @@ FAK2\_HUMAN\_D0  & Truncated YopH164         & 0.3                             \
 \end{table*}
 
 \begin{figure}[tb]
-   \includegraphics[width=\columnwidth]{figures/kinome_expression.png}
+   \includegraphics[width=\columnwidth]{figures/kinome_expression.jpg}
   \caption{{\bf Representation of kinase domain expression results on phylogenetic tree.}
   Dark green circles represent kinases with expression above 50 mg/L yield.
   Light green circles represent kinases with expression between 50 and 12 mg/L yield.
