Add Nick Levinson as coauthor and add basic Acknowledgments.

--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -84,6 +84,9 @@
 \author{Markus Seeliger}
 \affiliation{Department of Pharmacological Sciences, Stony Brook University Medical School, Stony Brook, NY 11794}
 \email{markus.seeliger@stonybrook.edu}
+\author{Nicholas Levinson}
+\affiliation{Department of Pharmacology, University of Minnesota, Minneapolis, MN 55455}
+\email{nml@umn.edu}
 \author{John D. Chodera}
  \thanks{Corresponding author}
  \email{john.chodera@choderalab.org}
@@ -381,6 +384,15 @@ FAK2\_HUMAN\_D0  & Truncated YopH164         & 0.3                             \
 
 Bacterial coexpression of kinases appears to be a viable approach for studying a wide variety of human kinase domain constructs.
 We hope that other laboratories find these resources useful in their own work.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% ACKNOWLEDGMENTS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Acknowledgments}
+\label{section:acknowledgments}
+
+DLP, SMH, LRL, SKA, and JDC acknowledge support from the Sloan Kettering Institute.
+JDC and DLP acknowledge partial support from NIH grant P30 CA008748 and the Louis V.~Gerstner Young Investigator Award.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % BIBLIOGRAPHY
